Let's f*ck some shit up

--- a/socket_server/package.json
+++ b/socket_server/package.json
@@ -4,6 +4,8 @@
 	"private": "true",
 	"dependencies": {
 		"socket.io": "*",
-		"mysql": "*"
+		"mysql": "*",
+		"passport": "*",
+		"passport-local": "*"
 	}
 }
