--- a/socket_server/package.json
+++ b/socket_server/package.json
@@ -6,6 +6,7 @@
 		"socket.io": "*",
 		"mysql": "*",
 		"passport": "*",
-		"passport-local": "*"
+		"passport-local": "*",
+		"password-hash": "*"
 	}
 }
