one step closer to 0.2

--- a/socket_server/package.json
+++ b/socket_server/package.json
@@ -1,12 +1,11 @@
 {
 	"name": "SynergyTubeServer",
-	"version": "0.0.1",
+	"version": "0.2",
 	"private": "true",
 	"dependencies": {
 		"socket.io": "*",
 		"mysql": "*",
-		"passport": "*",
-		"passport-local": "*",
+		"nodemailer": "*",
 		"password-hash": "*"
 	}
 }
