--- a/socket_server/package.json
+++ b/socket_server/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "SynergyTubeServer",
-	"version": "0.2",
+	"version": "0.2.1",
 	"private": "true",
 	"author": "Screeny <screeny05@gmail.com>",
 	"description": "Server-Side delievery of Socket.IO based Communications to the Client",
@@ -14,10 +14,10 @@
 		"url": "https://github.com/screeny05/SynergyTube.git"
 	},
 	"dependencies": {
-		"socket.io": "*",
-		"mysql": "*",
-		"nodemailer": "*",
-		"password-hash": "*"
+		"socket.io": "0.9.x",
+		"mysql": "2.0.x",
+		"nodemailer": "0.4.x",
+		"password-hash": "1.2.x"
 	},
 	"license": "MIT"
 }
