screw this comma

--- a/socket_server/package.json
+++ b/socket_server/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"start": "node ./app.js",
 		"test": "echo coming soon",
-		"postdeploy": "node ./first_start.js",
+		"postdeploy": "node ./first_start.js"
 	},
 	"repository": {
 		"type": "git",
