--- a/socket_server/package.json
+++ b/socket_server/package.json
@@ -1,23 +1,21 @@
 {
-	"name": "SynergyTubeServer",
-	"version": "0.2.1",
-	"private": "true",
-	"author": "Screeny <screeny05@gmail.com>",
-	"description": "Server-Side delievery of Socket.IO based Communications to the Client",
-	"scripts": {
-		"start": "node ./app.js",
-		"test": "echo coming soon",
-		"postdeploy": "node ./first_start.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/screeny05/SynergyTube.git"
-	},
-	"dependencies": {
-		"socket.io": "0.9.x",
-		"mysql": "2.0.x",
-		"nodemailer": "0.4.x",
-		"password-hash": "1.2.x"
-	},
-	"license": "MIT"
+  "name": "SynergyTubeServer",
+  "version": "0.2.2",
+  "private": "true",
+  "author": "Screeny <screeny05@gmail.com>",
+  "description": "Server-Side delievery of Socket.IO based Communications to the Client",
+  "scripts": {
+    "start": "node ./app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/screeny05/SynergyTube.git"
+  },
+  "dependencies": {
+    "socket.io": "0.9.x",
+    "mysql": "2.0.x",
+    "nodemailer": "0.4.x",
+    "password-hash": "1.2.x"
+  },
+  "license": "MIT"
 }
